Bug 101284 - [G45] ES2-CTS.functional.texture.specification.basic_copytexsubimage2d.cube_rgba
Summary: [G45] ES2-CTS.functional.texture.specification.basic_copytexsubimage2d.cube_rgba
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Ian Romanick
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-03 01:14 UTC by Mark Janes
Modified: 2017-09-04 17:33 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2017-06-03 01:14:19 UTC
Regressed by:

726b68ad822ba07ec042c6d175208f49af8cf248
Author:     Jason Ekstrand <jason@jlekstrand.net>

i965/blorp: Support copyteximage on gen4-5

Reviewed-by: Topi Pohjolainen <topi.pohjolainen@intel.com>


Together with:
ES2-CTS.functional.texture.specification.basic_copyteximage2d.cube_rgba


glcts: /home/jenkins/workspace/Leeroy/repos/mesa/src/intel/blorp/blorp_blit.c:1834: try_blorp_blit: Assertion `wm_prog_key->need_dst_offset' failed.
Comment 1 Jason Ekstrand 2017-06-03 02:36:21 UTC
Ian has a couple of patches in his generate mipmaps branch that should fix this.
Comment 2 Ian Romanick 2017-06-04 07:11:41 UTC
I tried to verify this, but it doesn't seem like the CI runs that test on those platforms for me.  In view/dev/job/idr/421/testReport/ES2-CTS.functional.texture.specification/basic_copyteximage2d/, I only see BDW, HSW, and SKL.  Am I doing something wrong?

Anyway, commits 4415a46..3afa6d5 in the genmipmap branch of my fd.o tree have the fixes to try.
Comment 3 Mark Janes 2017-06-05 16:14:07 UTC
The platforms are slow, and run only for daily builds in CI.  You can specify "build with parameters" and change "type" to "daily" to get g45.
Comment 4 Ian Romanick 2017-06-06 00:22:44 UTC
Patch sent to mesa-dev: https://patchwork.freedesktop.org/patch/160027/
Comment 5 Emil Velikov 2017-09-04 17:33:34 UTC
Issue should be resolved with the following. Feel free to reopen otherwise.

commit b2dd61196e7fb4ee9b4d1be7b83c2bdfa7f12021
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Wed May 31 11:29:14 2017 -0700

    intel/blorp: Set needs_(dst|src)_offset for Gen4 cubemaps


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.